--- a/CSS/utility.css
+++ b/CSS/utility.css
@@ -1,1 +1,43 @@
 /* This CSS File will contain Utility functions for ease of use styling in Classes */
+
+.container{
+    display: flex;
+    position: absolute;
+    width: 1500px;
+    border: 2px solid black;
+    background-color: aqua;
+    opacity: 0.5;
+}
+
+.two{
+    border: 2px solid black;
+}
+
+.three{
+    border: 2px solid black;
+}
+
+.four{
+    border: 2px solid black;
+}  
+
+.five{
+    border: 2px solid black;
+}
+
+.six{
+    border: 2px solid black;
+}
+
+.seven{
+    border: 2px solid black;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #f5f5f5;
+    border: 2px solid black;
+}
