--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,2 +1,1 @@
-/* This CSS will contain Global Styling for all pages such as Fonts
-   Headers, and Footers */
+/* This CSS will contain Global Styling for all pages such as Fonts Headers, and Footers */
