--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,1 +1,50 @@
 /* This file will contain the CSS Styling for the main body of the HTML Home Page */
+
+.container{
+    display: flex;
+    position: absolute;
+    width: 1500px;
+    height: 2000px;
+    border: 2px solid black;
+    background-color: aqua;
+    opacity: 0.5;
+}
+
+.two{
+    border: 2px solid black;
+    background-color: red;
+}
+
+.three{
+    border: 2px solid black;
+    background-color: green;
+}
+
+.four{
+    border: 2px solid black;
+    background-attachment: yellow;
+}  
+
+.five{
+    border: 2px solid black;
+    background-color: blue;
+}
+
+.six{
+    border: 2px solid black;
+    background-color: purple;
+}
+
+.seven{
+    border: 2px solid black;
+    background-color: mediumvioletred;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #f5f5f5;
+    border: 2px solid black;
+}
