--- a/CSS/home.css
+++ b/CSS/home.css
@@ -2,48 +2,38 @@
 
 .container{
     display: flex;
-    position: absolute;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-around;
     width: 1500px;
-    height: 2000px;
+    height: 800px;
     border: 2px solid black;
     background-color: aqua;
     opacity: 0.5;
 }
 
-.two{
+.social{
+    text-align: center;
+    width: 300px;
+    height: 20px;
     border: 2px solid black;
-    background-color: red;
+    background-color: rgb(20, 122, 247);
+    opacity: 0.7;
 }
 
-.three{
+.flex{
+    text-align: center;
     border: 2px solid black;
-    background-color: green;
-}
-
-.four{
-    border: 2px solid black;
-    background-attachment: yellow;
-}  
-
-.five{
-    border: 2px solid black;
-    background-color: blue;
-}
-
-.six{
-    border: 2px solid black;
-    background-color: purple;
-}
-
-.seven{
-    border: 2px solid black;
-    background-color: mediumvioletred;
+    background-color: greenyellow;
+    opacity: 0.7;
+    height: 100px;
+    width: 75px;
 }
 
 footer{
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 1500px;
     height: 50px;
     background-color: #f5f5f5;
     border: 2px solid black;
