--- a/CSS/home.css
+++ b/CSS/home.css
@@ -2,39 +2,35 @@
 
 .container{
     display: flex;
-    position: relative;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 1500px;
-    height: 800px;
-    border: 2px solid black;
-    background-color: aqua;
-    opacity: 0.5;
+    border: 10px solid black;
+    height: 90vh;
+    
+    
 }
 
-.social{
+.box{
+    width: 150px;
+    height: 150px;
+    font-size: 8em;
     text-align: center;
-    width: 300px;
-    height: 20px;
-    border: 2px solid black;
-    background-color: rgb(20, 122, 247);
-    opacity: 0.7;
+    border-radius: 15px;
+
 }
 
-.flex{
-    text-align: center;
-    border: 2px solid black;
-    background-color: greenyellow;
-    opacity: 0.7;
-    height: 100px;
-    width: 75px;
+#box1{
+    background-color: red;
+    
 }
 
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 1500px;
-    height: 50px;
-    background-color: #f5f5f5;
-    border: 2px solid black;
+#box2{
+    background-color: blue;
 }
+
+#box3{
+    background-color: green;
+}
+
+#box4{
+    background-color: yellow;
+}
+
