--- a/CSS/home.css
+++ b/CSS/home.css
@@ -2,24 +2,30 @@
 
 .container{
     display: flex;
+    position: relative;
     border: 10px solid black;
-    height: 90vh;
-    
-    
+    height: 90vh; 
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .box{
-    width: 150px;
-    height: 150px;
-    font-size: 8em;
-    text-align: center;
+    display: flex;
+    width: 100px;
+    height: 100px;
+    font-size: 2em;
     border-radius: 15px;
-
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 #box1{
+    display: flex;
+    position: absolute;
+    top: 0;
     background-color: red;
-    
 }
 
 #box2{
